crates/djls-semantic/src/structure/snapshots/djls_semantic__structure__tree__tests__nodelist.snap
---
source: crates/djls-semantic/src/structure/tree.rs
expression: nodelist_view
---
nodes:
  - kind: Text
    span:
      start: 0
      length: 1
  - kind: Tag
    name: extends
    bits:
      - "\"base.html\""
    span:
      start: 3
      length: 21
  - kind: Text
    span:
      start: 26
      length: 1
  - kind: Tag
    name: load
    bits:
      - static
      - i18n
    span:
      start: 29
      length: 18
  - kind: Text
    span:
      start: 49
      length: 1
  - kind: Tag
    name: block
    bits:
      - header
    span:
      start: 52
      length: 14
  - kind: Text
    span:
      start: 68
      length: 20
  - kind: Tag
    name: endblock
    bits:
      - header
    span:
      start: 90
      length: 17
  - kind: Text
    span:
      start: 109
      length: 2
  - kind: Tag
    name: if
    bits:
      - user.is_authenticated
    span:
      start: 113
      length: 26
  - kind: Text
    span:
      start: 141
      length: 16
  - kind: Variable
    var: user.name
    filters: []
    span:
      start: 159
      length: 11
  - kind: Text
    span:
      start: 172
      length: 9
  - kind: Tag
    name: if
    bits:
      - user.is_superuser
    span:
      start: 183
      length: 22
  - kind: Text
    span:
      start: 207
      length: 32
  - kind: Tag
    name: elif
    bits:
      - user.is_staff
    span:
      start: 241
      length: 20
  - kind: Text
    span:
      start: 263
      length: 34
  - kind: Tag
    name: else
    bits: []
    span:
      start: 299
      length: 6
  - kind: Text
    span:
      start: 307
      length: 39
  - kind: Tag
    name: endif
    bits: []
    span:
      start: 348
      length: 7
  - kind: Text
    span:
      start: 357
      length: 1
  - kind: Tag
    name: else
    bits: []
    span:
      start: 360
      length: 6
  - kind: Text
    span:
      start: 368
      length: 26
  - kind: Tag
    name: endif
    bits: []
    span:
      start: 396
      length: 7
  - kind: Text
    span:
      start: 405
      length: 2
  - kind: Tag
    name: for
    bits:
      - item
      - in
      - items
    span:
      start: 409
      length: 19
  - kind: Text
    span:
      start: 430
      length: 9
  - kind: Variable
    var: item
    filters: []
    span:
      start: 441
      length: 6
  - kind: Text
    span:
      start: 449
      length: 6
  - kind: Tag
    name: endfor
    bits: []
    span:
      start: 457
      length: 8
  - kind: Text
    span:
      start: 467
      length: 1
