crates/djls-semantic/src/structure/snapshots/djls_semantic__structure__tree__tests__template_tree.snap
---
source: crates/djls-semantic/src/structure/tree.rs
expression: "TemplateTreeSnapshot::from_tree(template_tree, &db)"
---
root: 0
regions:
  - span:
      start: 0
      length: 468
    parent: ~
    nodes:
      - node: Text
        span:
          start: 0
          length: 1
      - node: StandaloneTag
        tag: extends
        bits:
          - "\"base.html\""
        marker_span:
          start: 3
          length: 21
        full_span:
          start: 1
          length: 25
      - node: Text
        span:
          start: 26
          length: 1
      - node: StandaloneTag
        tag: load
        bits:
          - static
          - i18n
        marker_span:
          start: 29
          length: 18
        full_span:
          start: 27
          length: 22
      - node: Text
        span:
          start: 49
          length: 1
      - node: Block
        tag: block
        bits:
          - header
        marker_span:
          start: 52
          length: 14
        full_span:
          start: 50
          length: 18
        body: 1
        role: Opener
      - node: Text
        span:
          start: 109
          length: 2
      - node: Block
        tag: if
        bits:
          - user.is_authenticated
        marker_span:
          start: 113
          length: 26
        full_span:
          start: 111
          length: 30
        body: 3
        role: Opener
      - node: Text
        span:
          start: 405
          length: 2
      - node: Block
        tag: for
        bits:
          - item
          - in
          - items
        marker_span:
          start: 409
          length: 19
        full_span:
          start: 407
          length: 23
        body: 10
        role: Opener
      - node: Text
        span:
          start: 467
          length: 1
  - span:
      start: 50
      length: 59
    parent: 0
    nodes:
      - node: Block
        tag: block
        bits:
          - header
        marker_span:
          start: 52
          length: 14
        full_span:
          start: 50
          length: 18
        body: 2
        role: Segment
  - span:
      start: 68
      length: 20
    parent: 1
    nodes:
      - node: Text
        span:
          start: 68
          length: 20
  - span:
      start: 111
      length: 294
    parent: 0
    nodes:
      - node: Block
        tag: if
        bits:
          - user.is_authenticated
        marker_span:
          start: 113
          length: 26
        full_span:
          start: 111
          length: 30
        body: 4
        role: Segment
      - node: Block
        tag: else
        bits: []
        marker_span:
          start: 360
          length: 6
        full_span:
          start: 358
          length: 10
        body: 9
        role: Segment
  - span:
      start: 141
      length: 217
    parent: 3
    nodes:
      - node: Text
        span:
          start: 141
          length: 16
      - node: Variable
        span:
          start: 159
          length: 11
      - node: Text
        span:
          start: 172
          length: 9
      - node: Block
        tag: if
        bits:
          - user.is_superuser
        marker_span:
          start: 183
          length: 22
        full_span:
          start: 181
          length: 26
        body: 5
        role: Opener
      - node: Text
        span:
          start: 357
          length: 1
  - span:
      start: 181
      length: 176
    parent: 4
    nodes:
      - node: Block
        tag: if
        bits:
          - user.is_superuser
        marker_span:
          start: 183
          length: 22
        full_span:
          start: 181
          length: 26
        body: 6
        role: Segment
      - node: Block
        tag: elif
        bits:
          - user.is_staff
        marker_span:
          start: 241
          length: 20
        full_span:
          start: 239
          length: 24
        body: 7
        role: Segment
      - node: Block
        tag: else
        bits: []
        marker_span:
          start: 299
          length: 6
        full_span:
          start: 297
          length: 10
        body: 8
        role: Segment
  - span:
      start: 207
      length: 32
    parent: 5
    nodes:
      - node: Text
        span:
          start: 207
          length: 32
  - span:
      start: 263
      length: 34
    parent: 5
    nodes:
      - node: Text
        span:
          start: 263
          length: 34
  - span:
      start: 307
      length: 39
    parent: 5
    nodes:
      - node: Text
        span:
          start: 307
          length: 39
  - span:
      start: 368
      length: 26
    parent: 3
    nodes:
      - node: Text
        span:
          start: 368
          length: 26
  - span:
      start: 407
      length: 60
    parent: 0
    nodes:
      - node: Block
        tag: for
        bits:
          - item
          - in
          - items
        marker_span:
          start: 409
          length: 19
        full_span:
          start: 407
          length: 23
        body: 11
        role: Segment
  - span:
      start: 430
      length: 25
    parent: 10
    nodes:
      - node: Text
        span:
          start: 430
          length: 9
      - node: Variable
        span:
          start: 441
          length: 6
      - node: Text
        span:
          start: 449
          length: 6
